--- a/about/package.json
+++ b/about/package.json
@@ -15,6 +15,7 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "cntl": "^1.0.0",
     "gatsby": "^3.13.1",
     "gatsby-plugin-image": "^1.14.1",
     "gatsby-plugin-react-helmet": "^4.14.0",
