--- a/about/package.json
+++ b/about/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "cntl": "^1.0.0",
     "gatsby": "^3.13.1",
+    "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-image": "^1.14.1",
     "gatsby-plugin-react-helmet": "^4.14.0",
     "gatsby-plugin-sharp": "^3.14.1",
