--- a/about/package.json
+++ b/about/package.json
@@ -25,6 +25,7 @@
     "gatsby-source-filesystem": "^3.14.0",
     "gatsby-transformer-sharp": "^3.14.0",
     "react": "^17.0.1",
+    "react-compare-slider": "^2.1.0",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0"
   },
